@@ -159,8 +159,8 @@
 006_026.cpp
 006_027.cpp
 006_028.cpp
-# 006_029.cpp
-# 006_030.cpp
+006_029.cpp
+006_030.cpp
 006_031.cpp
 
 #
